# long_math

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/poly_mult_perf/: CMakeLists.txt  gnuplot.sh  main.cpp
long_math_lib/: CMakeLists.txt  Fourier.h  LongMath.cpp  LongMath.h  Polynomial.cpp  Polynomial.h
long_math_test/: CMakeLists.txt  FourierTest.cpp  PolynomialTest.cpp  main.cpp  test.cpp
